<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/vsadmin" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A2A2A2"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>

        <EditText
            android:id="@+id/lname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A2A2A2"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A2A2A2"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>

        <EditText
            android:id="@+id/mobno"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A2A2A2"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>
        <EditText
            android:id="@+id/clgname"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#A2A2A2"
            android:ems="10"
            android:hint="@string/college_name"
            android:inputType="textPersonName"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>

        <EditText
            android:id="@+id/sem"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/semester"
            android:backgroundTint="#A2A2A2"
            android:textColor="#A2A2A2"
            android:textColorHint="#A2A2A2"/>

        <RadioGroup
            android:layout_width="100dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp">

            <RadioButton
                android:id="@+id/malebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/male"
                android:textColor="#A2A2A2"/>

            <RadioButton
                android:id="@+id/femalebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="#A2A2A2"/>

            <RadioButton
                android:id="@+id/otherbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/other"
                android:textColor="#A2A2A2"/>
        </RadioGroup>

        <Spinner
            android:id="@+id/deptspinner"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/regsubmit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btnshape"
            android:text="@string/submit"
            android:textColor="#FFFF"/>

    </LinearLayout>

</ScrollView>