<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/vsadmin" />

        <Spinner
            android:id="@+id/eventdept"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

        <Spinner
            android:id="@+id/deptevent"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>

        <EditText
            android:id="@+id/regemail1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_leader"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_2"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail3"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_3"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail4"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_4"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail5"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_5"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail6"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_6"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <EditText
            android:id="@+id/regemail7"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/participant_email_7"
            android:backgroundTint="#A2A2A2"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="#FFFF"
            android:textColorHint="#d2d2d2"/>

        <CheckBox
            android:id="@+id/paid"
            android:layout_width="120dp"
            android:layout_height="68dp"
            android:layout_marginTop="16dp"
            android:text="@string/paying"
            android:checked="true"
            android:textColor="#A2A2A2" />

        <Button
            android:id="@+id/submreg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="65dp"
            android:background="@drawable/btnshape"
            android:text="@string/submit"
            android:textColor="#FFFF"/>

    </LinearLayout>

</ScrollView>
