<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpic"
    tools:context=".activities.CodersActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/kuldip"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#25D366"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/email"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@+id/profile_image"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/mail" />

                <ImageView
                    android:id="@+id/github"
                    android:layout_width="41dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/profile_image"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="67dp"
                    app:srcCompat="@drawable/github" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dev1"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/data"
                    android:layout_width="220dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/dev1txt"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="111dp"
                    android:layout_height="118dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/d1"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dhiren"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardBackgroundColor="#ffffff"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="true"
            app:contentPadding="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/email2"
                    android:layout_width="41dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/profile_image2"
                    android:layout_centerHorizontal="true"
                    app:srcCompat="@drawable/mail" />

                <ImageView
                    android:id="@+id/github2"
                    android:layout_width="41dp"
                    android:layout_height="40dp"
                    android:layout_alignBottom="@+id/profile_image2"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="67dp"
                    app:srcCompat="@drawable/github" />

                <TextView
                    android:id="@+id/name2"
                    android:layout_width="222dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/dev2"
                    android:textAlignment="center"
                    android:textColor="#000080"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/data2"
                    android:layout_width="220dp"
                    android:layout_height="33dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="45dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/dev2txt"
                    android:textAlignment="center"
                    android:textColor="#000080"
                    android:textSize="14sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image2"
                    android:layout_width="111dp"
                    android:layout_height="118dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/d2"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>